VBF-44 new: fix z-indices on header and header menu so header menu appears above page content, animates down behind header

--- a/src/ui/components/header/header.component.scss
+++ b/src/ui/components/header/header.component.scss
@@ -48,7 +48,7 @@
         background-color: inherit;
         display: flex;
         align-items: center;
-        z-index: 1;
+        z-index: 2;
         width: 50%;
     }
 }
